--- a/WebContent/html/css/dynamicmapnew.css
+++ b/WebContent/html/css/dynamicmapnew.css
@@ -7,39 +7,43 @@ body {
 .path {
 	stroke-dasharray: 300;
 	stroke-dashoffset: 1000;
-	animation: dash 15s linear forwards infinite  ;
+	animation: dash 15s linear forwards infinite;
 	stroke-width: 2;
 	stroke: url(#grad-other);
 }
 
-.path[action='ALLOW'],.path[action='pass'] {
+.path[action='ALLOW'], .path[action='pass'] {
 	stroke: url(#grad-allow);
 }
 
-.path[action='DROP'],.path[action='block'] {
+.path[action='DROP'], .path[action='block'] {
 	stroke: url(#grad-deny);
 }
-.path[action='HIGH']{
+
+.path[action='HIGH'] {
 	stroke: url(#grad-high);
 }
 
-.path[action='MEDIUM']{
+.path[action='MEDIUM'] {
 	stroke: url(#grad-medium);
 }
-.path[action='LOW']{
+
+.path[action='LOW'] {
 	stroke: url(#grad-low);
 }
+
 .zoomCircle {
 	display: block;
 }
 
-@keyframes dash {
-	from { 
-		stroke-dashoffset: 3000;
-	}
-	to {
-		stroke-dashoffset: -3000;
-	}
+@keyframes dash {from { stroke-dashoffset:3000;
+	
+}
+
+to {
+	stroke-dashoffset: -3000;
+}
+
 }
 #form-select-date {
 	color: #e0d8d8;
@@ -50,18 +54,18 @@ body {
 	position: relative;
 }
 
-#type-map-name{
+#type-map-name {
 	position: absolute;
-    top: -8px;
-    left: calc(50% - 213px);
-    font-size: 25px;
+	top: -8px;
+	left: calc(50% - 213px);
+	font-size: 25px;
 }
 
-#maps-name{
+#maps-name {
 	position: absolute;
-    top: -8px;
-    right: 20px;
-    font-size: 20px;
+	top: -8px;
+	right: 20px;
+	font-size: 20px;
 }
 
 #form-select-date label {
@@ -102,6 +106,11 @@ body {
 	background: #3c78a77d;
 }
 
+#btn-filter {
+	background: #ffffff;
+	color: black !important;
+}
+
 #svg-container {
 	background-image: url("../images/bg.png");
 	position: relative;
@@ -136,7 +145,7 @@ circle {
 	bottom: 0px;
 	left: 0.5%;
 	font-size: 14px;
-	opacity:0.8;
+	opacity: 0.8;
 }
 
 .detail-block {
@@ -175,7 +184,7 @@ circle {
 }
 
 #detail-a {
-	display:none;
+	display: none;
 	width: 100%;
 	margin-right: 15px;
 }
@@ -214,18 +223,17 @@ circle {
 	margin-left: -5px;
 }
 
-
 #detail-a .action {
 	width: 10%;
 }
 
 #detail-a .date {
 	width: 10%;
-	text-align:center;
+	text-align: center;
 }
 
 #detail-b {
-	display:none;
+	display: none;
 	float: right;
 	width: 70%;
 }
@@ -264,7 +272,7 @@ circle {
 }
 
 #detail-c {
-	display:none;
+	display: none;
 	width: 100%;
 }
 
@@ -277,7 +285,7 @@ circle {
 }
 
 #detail-c .detail-header .dst {
-	margin-left:-5px;
+	margin-left: -5px;
 }
 
 #detail-c .sig {
@@ -298,20 +306,25 @@ circle {
 
 #detail-a .action span, #detail-c .priority span {
 	display: inline-block;
-    padding: 2px 0px;
-    width: 80%;
-    text-align: center;
-    font-weight: bold;
-    border-radius: 5px;
-    box-shadow: 1px 1px 2px 2px #212121;
+	padding: 2px 0px;
+	width: 80%;
+	text-align: center;
+	font-weight: bold;
+	border-radius: 5px;
+	box-shadow: 1px 1px 2px 2px #212121;
 }
-#detail-a .action span{
+
+#detail-a .action span {
 	width: 60% !important;
 }
-#detail-a .action span[action='ALLOW'],#detail-a .action span[action='pass'] {
+
+#detail-a .action span[action='ALLOW'], #detail-a .action span[action='pass']
+	{
 	background: #25b325;
 }
-#detail-a .action span[action='DROP'],#detail-a .action span[action='block'] {
+
+#detail-a .action span[action='DROP'], #detail-a .action span[action='block']
+	{
 	background: #c33835;
 }
 /* .detailrow[action='ALLOW'],.detailrow[action='pass']{
@@ -323,33 +336,35 @@ circle {
 #detail-c .priority span[priority='1'] {
 	background: #db7093;
 }
+
 #detail-c .priority span[priority='2'] {
 	background: #daa520;
 }
+
 #detail-c .priority span[priority='3'] {
 	background: #228b22;
 }
 
 #detail-c .detail-header .sig {
-	margin-left:-15px;
+	margin-left: -15px;
 }
 
 #detail-c .detail-body .sig {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	margin-bottom:-5px;
+	margin-bottom: -5px;
 }
 
 #detail-c .detail-body .classification {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	margin-bottom:-5px;
+	margin-bottom: -5px;
 }
 
 #detail-c .detail-header .classification {
-	margin-left:-5px;
+	margin-left: -5px;
 }
 
 #detail-c .srcport {
@@ -389,11 +404,47 @@ circle {
 	color: white;
 }
 
-text{
-	cursor:pointer;
+text {
+	cursor: pointer;
 }
 
 .detail-body .detailrow {
-  	border-bottom: 1px solid #467287;
-    padding: 5px 0px 3px 5px;
+	border-bottom: 1px solid #467287;
+	padding: 5px 0px 3px 5px;
+}
+
+button:focus {
+	outline: 0 !important;
+}
+
+#modal-filter {
+	color: #524c4c !important;
+}
+
+#modal-filter .modal-header {
+	background: #337ab7;
+	color: #fff;
+}
+
+#modal-filter hr {
+	margin: 10px 0;
+}
+
+.filter-type-display {
+	display: inline-block;
+	margin: 0px 3px 3px 2px;
+	border: 1px solid #9c9c9c;
+	padding: 2px 0px 2px 8px;
+	border-radius: 5px;
+}
+
+.filter-type-display span {
+	
+}
+
+.filter-type-display button {
+	background: none;
+	border: none;
+	color: #ababab;
+	font-weight: 100;
 }
