update filter click

--- a/WebContent/html/css/dynamicmapnew.css
+++ b/WebContent/html/css/dynamicmapnew.css
@@ -277,11 +277,11 @@ circle {
 }
 
 #detail-c .src {
-	width: 10%;
+	width: 13%;
 }
 
 #detail-c .dst {
-	width: 10%;
+	width: 13%;
 }
 
 #detail-c .detail-header .dst {
@@ -289,7 +289,7 @@ circle {
 }
 
 #detail-c .sig {
-	width: 35%;
+	width: 25%;
 }
 
 #detail-c .classification {
@@ -297,7 +297,7 @@ circle {
 }
 
 #detail-c .date {
-	width: 7%;
+	width: 10%;
 }
 
 #detail-c .priority {
@@ -346,7 +346,11 @@ circle {
 }
 
 #detail-c .detail-header .sig {
-	margin-left: -15px;
+	margin-left: -4px;
+}
+
+#detail-c .detail-header .priority {
+	margin-left: -10px;
 }
 
 #detail-c .detail-body .sig {
@@ -354,6 +358,7 @@ circle {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	margin-bottom: -5px;
+	padding-left: 10px;
 }
 
 #detail-c .detail-body .classification {
@@ -419,11 +424,13 @@ button:focus {
 
 #modal-filter {
 	color: #524c4c !important;
+	font-size: 12px !important;
 }
 
 #modal-filter .modal-header {
 	background: #337ab7;
 	color: #fff;
+	padding: 10px;
 }
 
 #modal-filter hr {
@@ -461,4 +468,28 @@ button:focus {
 }
 .location-filter-result span{
 	font-weight: bold;
+}
+
+.modal-lg {
+    width: 700px;
+}
+
+.select2-container--default .select2-results__group {
+    font-size: 12px !important;
+}
+
+.select2-container--default .select2-results__option .select2-results__option {
+    font-size: 12px !important;
+}
+
+.modal-title {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+}
+.filter-row {
+	cursor: pointer;
+}
+.filter-row:hover, .filter-hover {
+	background: #fff;
+	color: #544747;
 }
