--- a/WebContent/html/css/dynamicmapnew.css
+++ b/WebContent/html/css/dynamicmapnew.css
@@ -490,7 +490,9 @@ button:focus {
 .filter-row {
 	cursor: pointer;
 }
-.filter-row:hover, .filter-hover, #detail-c .detail-body .sig:hover {
+.filter-row:hover, .filter-hover,
+#detail-c .detail-body .sig:hover,
+#detail-c .detail-body .classification:hover {
 	/*
 	background: #fff;
 	color: #544747;
@@ -498,7 +500,7 @@ button:focus {
 	border: 1px solid #fff;
 	border-radius: 3px;
 	box-shadow: 0 0 2px 1px #fff;
-	padding: 2px 5px;
+	padding: 0px 5px;
 }
 .filter-row:hover[filter-id='signame'],.filter-row:hover[filter-id='classification']{
 	border: none;
