--- a/WebContent/html/css/dynamicmapnew.css
+++ b/WebContent/html/css/dynamicmapnew.css
@@ -158,6 +158,7 @@ circle {
 }
 
 .detail-header {
+	position: relative;
 	width: 100%;
 	background: #326ea261;
 	color: #fff;
@@ -515,4 +516,17 @@ button:focus {
 	border-radius: 0px;
 	box-shadow: none;
 	padding: 0px;
+}
+
+.detail-function{
+	display: inline-block;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+}
+.detail-function button {
+	background: #415465fa;
+}
+.detail-function button i {
+	color: #fff;
 }
